--- a/css/task1.css
+++ b/css/task1.css
@@ -16,9 +16,9 @@ body {
     margin: 2em auto;
     padding: 1em;
 
-    box-shadow: 0 0 20px #012344;
+    box-shadow: 0 0 20px #ffe8b9;
 
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 170, 218, 0.5);
 }
 
 .gallery li:first-child {
