--- a/css/task1.css
+++ b/css/task1.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 900px;
+    max-width: 600px; /* Adjusted width */
     margin: 2em auto;
     padding: 1em;
     background-color: var(--bg-color);
